<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/shape_r10_ring"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/shape_top_r10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="98"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/dp_15"
            android:text="@string/player"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49"
            android:gravity="center"
            android:text="@string/floor"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49"
            android:gravity="center"
            android:text="@string/assist"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="57"
            android:paddingEnd="@dimen/dp_15"
            android:paddingStart="@dimen/dp_0"
            android:gravity="center"
            android:text="@string/shoot"
            android:textColor="@color/c_94999f"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="1dp"
        android:minHeight="@dimen/dp_25"
        android:paddingBottom="1dp"
        app:layoutManager="com.drake.brv.layoutmanager.HoverLinearLayoutManager"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/item_detail_lineup_basketball" />
</LinearLayout>