<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_1D1D1D"
        android:orientation="vertical">

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#14FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp_15">

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="98"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_4">

                <TextView
                    android:id="@+id/tvPlayerNum"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_25"
                    android:background="@drawable/ic_basket_team_first"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_11"
                    tools:text="22" />

                <TextView
                    android:id="@+id/tvPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    tools:text="string" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:gravity="center"
                android:textColor="@color/c_d7d7e7"
                android:textSize="@dimen/sp_12"
                tools:text="@string/time" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:gravity="center"
                android:textColor="@color/c_d7d7e7"
                android:textSize="@dimen/sp_12"
                tools:text="@string/score" />

            <TextView
                android:id="@+id/tvFloor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:gravity="center"
                android:textColor="@color/c_d7d7e7"
                android:textSize="@dimen/sp_12"
                tools:text="@string/floor" />

            <TextView
                android:id="@+id/tvAssist"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:gravity="center"
                android:textColor="@color/c_d7d7e7"
                android:textSize="@dimen/sp_12"
                tools:text="@string/assist" />

            <TextView
                android:id="@+id/tvShot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="57"
                android:gravity="center"
                android:paddingStart="@dimen/dp_0"
                android:paddingEnd="@dimen/dp_15"
                android:textColor="@color/c_d7d7e7"
                android:textSize="@dimen/sp_12"
                tools:text="@string/shoot" />
        </LinearLayout>
    </LinearLayout>

</layout>